# skess

./: .gitignore  README.md  pyproject.toml  railway.json
backend/src/: connection_manager.py  main.py
backend/src/application/: event_bus.py  game_rooms.py  orchestration.py  startup.py
backend/src/domain/game/: constants.py  contants.py  engine.py  events.py  leaderboard.py  (+1 more)
backend/src/game/: contants.py  engine.py  leaderboard.py
backend/src/utils/: colors.py
backend/src/ws/: connection_manager.py  validation_message.py  websocket_events.py
backend/tests/: test_client_manager.py  test_game.py  test_leaderboard.py  test_leading_board.py  test_websocket_endpoint.py
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/public/: site.webmanifest
frontend/src/: App.tsx  Home.tsx  Login.tsx  ProtectedRoutes.tsx  index.css  main.tsx
frontend/src/components/: Chat.tsx  ChatInput.tsx  ChoosingWord.tsx  DarkThemeMenu.tsx  DarkThemeToggle.tsx  GameEnded.tsx  Header.tsx  Highlight.tsx  Leaderboard.tsx  LoaderAnimation.tsx  PlayButtton.tsx  Round.tsx  SessionNicknameForm.tsx  SketchBoard.tsx  StatusBar.tsx  Timer.tsx  TurnScores.tsx  VolumeIcon.tsx  VolumeMenu.tsx  WordSelector.tsx
frontend/src/contants/: chatColors.ts  colors.ts  secondsToMiliseconds.ts  sketchColors.ts  strokeOptions.ts
frontend/src/context/: GameStatusContext.tsx  SessionContext.tsx  SketchBoardContext.tsx  WebsSocketsContext.tsx  Websockets.tsx
frontend/src/hooks/: useChat.tsx  useSketch.tsx  useTimer.tsx
frontend/src/utils/: getSvgPathFromStroke.ts  sessionToWebSocketUser.ts
(+15 files in other folders)
